ymlNS/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: practica2_201903865
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sopes1.carlosdavid.technology
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-grpc
            port:
              number: 8080
